force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/ARTL_Rate_Spec_Key_Matrix__c.object-meta.xml
<CustomObject>
    <label>Rate Spec Key Matrix</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rate Spec Key Matrix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rate Spec Key Matrixs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>