force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Business_Unit_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Business_Unit_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Business Unit Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>