force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Charge_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Charge Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>