force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Currency_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Currency_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Currency Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>