force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Floor_Rate__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Floor_Rate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Floor Rate</label>
    <length>100</length>
    <type>Text</type>
</CustomField>