force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Productcode__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Productcode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Productcode</label>
    <length>50</length>
    <type>Text</type>
</CustomField>