force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Rate_Row_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Rate_Row_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rate Row Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>