force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_RootProduct__c.field-meta.xml
<CustomField>
    <fullName>ARTL_RootProduct__c</fullName>
    <label>RootProduct</label>
    <length>150</length>
    <type>Text</type>
</CustomField>