force-app/main/default/objects/ARTL_Rate_Spec_Key_Matrix__c/fields/ARTL_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Service_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>